objects/Competitor_Relationship__c.object
<CustomObject>
    <description>Competitors related to a Group Account as Carriers and to an Opportunity as Incumbent/ Won / Competing</description>
    <fields>
        <fullName>AFA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field for AFA</description>
        <label>AFA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accums_Data_Shared__c</fullName>
        <description>Indicates if accums data is shared and the frequency</description>
        <label>Accums Data Shared</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Shared</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carve_Out__c</fullName>
        <formula>IF( Number_of_Carve_Out_Products__c &gt;0, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carve Out?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claims_Data_Shared__c</fullName>
        <description>Indicates the frequency that claims data is shared</description>
        <label>Claims Data Shared</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Not Shared</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments for the Relationship</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Account__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Carrier or vendor account related to the relationship record of Group Account or Opportunity</description>
        <label>Competitor/3rd Party Vendor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 3) OR 2</booleanFilter>
            <errorMessage>Please select Competitor Account</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Competitor Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Competitor_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>End Date of the Contract</description>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Carrier_Win_Factors__c</fullName>
        <description>Captures the Current Account&apos;s carrier win the competition</description>
        <label>Current Competitor Win Factors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dental__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Number of Dental Insurances</description>
        <label>Dental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disabilities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Number of disability</description>
        <label>Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discharge_Data_Shared__c</fullName>
        <description>Indicates if discharge data is shared and the frequency</description>
        <label>Discharge Data Shared</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Shared</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Incumbent_slash_rates_to_keep_busin__c</fullName>
        <description>Describe how competitor slashes rates to keep business</description>
        <inlineHelpText>Describe how competitor slashes rates to keep business</inlineHelpText>
        <label>Slash rates to keep business?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eligibility_Data_Shared__c</fullName>
        <description>Indicates the frequency that eligibility data is shared</description>
        <label>Eligibility Data Shared</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <description>Captures funding type of the relationship between the Group Account and the competitor</description>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Group Account related to the Competitor Relationship for Carrier Information</description>
        <label>Group Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <errorMessage>Please select Prospect or Group or Prospect (Non BlueSTAR) or Group (Non BlueSTAR) account</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Group_Account</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Group_Prospect_Account</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Prospect_Non_BlueSTAR</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Group_Account_Non_BlueSTAR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Competitor_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Satisfaction_with_Competitor__c</fullName>
        <description>Captures the Group Account&apos;s satisfaction with the competition</description>
        <label>Group Satisfaction with Competitor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Incumbent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Competitor is the incumbent on the Account</description>
        <label>Is Incumbent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lab_Data_Shared__c</fullName>
        <description>Indicates if lab data is shared and the frequency</description>
        <label>Lab Data Shared</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Shared</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length_of_Relationship_with_Group__c</fullName>
        <description>Captures the length of the relationship between the Group Account and Competitor</description>
        <label>Length of Relationship with Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Life__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a Account&apos;s interest in Life Insurance</description>
        <label>Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a Account&apos;s interest in Medical Insurance</description>
        <label>Medical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Source__c</fullName>
        <description>This will be used during migrations to identify the source</description>
        <label>Migration Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_additional_information__c</fullName>
        <description>Any Additional Information</description>
        <label>Migration additional information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Not_Insured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicating time period not insured</description>
        <label>Not Insured?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Carve_Out_Products__c</fullName>
        <description>Total number of carve out products that are associated with the Carrier Relationship</description>
        <label>Number of Carve Out Products</label>
        <summaryFilterItems>
            <field>Competitor_Products__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Competitor_Products__c.Sliced_Carveout__c</field>
            <operation>equals</operation>
            <value>Carve Out</value>
        </summaryFilterItems>
        <summaryForeignKey>Competitor_Products__c.Carrier__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Sliced_Products__c</fullName>
        <description>Total number of sliced products associated with the carrier relationship</description>
        <label>Number of Split Products</label>
        <summaryFilterItems>
            <field>Competitor_Products__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Competitor_Products__c.Sliced_Carveout__c</field>
            <operation>equals</operation>
            <value>Sliced</value>
        </summaryFilterItems>
        <summaryForeignKey>Competitor_Products__c.Carrier__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account__c</fullName>
        <description>Record id of the Opportunity or Group Account</description>
        <formula>IF( ISBlank(Group_Account__c),HYPERLINK(&quot;/&quot;&amp;Opportunity__r.Id, Opportunity__r.Name) ,HYPERLINK(&quot;/&quot;&amp;Group_Account__r.Id, Group_Account__r.Name) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity/Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity related to the Competitor relationship to capture Incumbent / Won / Competing data</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Group_Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Competitor_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Effective_Date__c</fullName>
        <description>Original Effective Date for the Competitor Relationship</description>
        <label>Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Data_Shared__c</fullName>
        <description>Indicates if pharmacy data is shared and the frequency</description>
        <label>Pharmacy Data Shared</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Shared</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Primary Competitor</description>
        <label>Primary Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Producer_Consultant_Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the producer / consultant firm who is working with the competitor</description>
        <label>Producer / Consultant Firm</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Consultant Account, Producer Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Competitor_Relationships2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Producer_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the producer / consultant contact who is working with the competitor</description>
        <label>Producer / Consultant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Consultant Contact, Producer Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Competitor_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Effective_Date__c</fullName>
        <description>Start date of the Contract for the Relationship</description>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <description>Captures why the competitor lost business to the related Group Account</description>
        <label>Win / Loss Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reinsurer__c</fullName>
        <description>Name reinsurer if it applies to carrier history</description>
        <label>Reinsurer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role of the Competitor Relationship</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incumbent</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Affiliated With</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sliced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a carrier has sliced business with HCSC</description>
        <label>Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sliced_with__c</fullName>
        <description>Field to indicate if there are any sliced products for this carrier</description>
        <formula>IF(Number_of_Sliced_Products__c&gt;0,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Competitor Relationship</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic Plan</label>
        <referenceTo>Strategic_Plan__c</referenceTo>
        <relationshipName>Competitor_3rd_Party_Vendors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <description>Captures the strengths of the competitor</description>
        <label>Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Contracts__c</fullName>
        <description>Total number of contracts the competitor/vendor has for the related account</description>
        <label>Total Contracts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Members__c</fullName>
        <description>Total number of members the competitor/vendor has for the related account</description>
        <label>Total Members</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Data__c</fullName>
        <description>Indicates the type of data shared</description>
        <label>Type of Data</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <description>Captures weaknesses of the competitor</description>
        <label>Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <label>Competitors / 3rd Party Vendors</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors / 3rd Party Vendors</pluralLabel>
    <recordTypes>
        <fullName>Carrier</fullName>
        <active>true</active>
        <description>Record type that captures the relationship between a Group Account and a Carrier</description>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>false</active>
        <description>Competitor for a Sales Opportunity</description>
        <label>Competitors</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>